# chartreuse

./: .travis.yml  CMakeLists.txt  README.md
chartreuse/: CMakeLists.txt
chartreuse/src/: CMakeLists.txt  common.h  configuration.h
chartreuse/src/algorithms/: CMakeLists.txt  algorithms_common.cc  algorithms_common.h  apodizer.cc  apodizer.h  autocorrelation.cc  autocorrelation.h  combedsignalgenerator.cc  combedsignalgenerator.h  dftpower.cc  dftpower.h  dftraw.cc  dftraw.h  kissfft.cc  kissfft.h  ringbuffer.cc  ringbuffer.h  scalegenerator.cc  scalegenerator.h  spectrogram.cc  spectrogram.h  spectrogrampower.cc  spectrogrampower.h
chartreuse/src/descriptors/: CMakeLists.txt  audiofundamentalfrequency.cc  audiofundamentalfrequency.h  audioharmonicity.cc  audioharmonicity.h  audiopower.cc  audiopower.h  audiospectrumcentroid.cc  audiospectrumcentroid.h  audiospectrumspread.cc  audiospectrumspread.h  audioupperlimitofharmonicity.cc  audioupperlimitofharmonicity.h  audiowaveform.cc  audiowaveform.h  descriptor_interface.h
chartreuse/src/interface/: CMakeLists.txt  analyzer.cc  analyzer.h  interface_common.h  manager.cc  manager.h
chartreuse/src/manager/: CMakeLists.txt  manager.cc  manager.h
chartreuse/tests/: CMakeLists.txt  debug.h  main.cc  tests.cc  tests.h
chartreuse/tests/algorithms/: CMakeLists.txt  tests_algorithms.cc  tests_apodizer.cc  tests_autocorrelation.cc  tests_combedsignalgenerator.cc  tests_dftraw.cc  tests_kissfft.cc  tests_scalegenerator.cc  tests_spectrogram.cc  tests_spectrogrampower.cc
chartreuse/tests/descriptors/: CMakeLists.txt  tests_audiofundamentalfrequency.cc  tests_audioharmonicity.cc  tests_audiopower.cc  tests_audiospectrumcentroid.cc  tests_audiospectrumspread.cc  tests_audiowaveform.cc
chartreuse/tests/interface/: CMakeLists.txt  tests_analyzer.cc  tests_manager.cc
chartreuse/tests/manager/: CMakeLists.txt  tests_manager.cc
doc/: Doxyfile
scripts/: .project  .pydevproject  audio_harmonicity.py  audio_spectrum_centroid.py  audio_spectrum_spread.py  correlation.py  dft.py  extract_test_data.py  freq_scale.py  fundamental_frequency.py  periodic_signal_detection.py  ringbuffer.py  signal_envelope.py  spectrogram.py  window.py
